# emll

./: .gitignore  DISCLAIMER.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
ag_dev_archive/: data_model_integration.py  run_hackett_inference.py  test_data_model_integration.py
emll/: linlog_model.py  pytensor_utils.py  test_linlog_model.py  test_pytensor_utils.py  test_theano_utils.py  util.py
emll/test_models/: mendes_model.py
notebooks/: contador.ipynb  hackett.ipynb  run_hackett_inference.py  run_hackett_inference_original.py  wu2004.ipynb
src/emll/: README.md  __init__.py  bmca.py  data_model_integration.py  linlog_model.py  preprocess.py  pymc_utils.py  pytensor_utils.py  test_antimony_utils.py  test_linlog_model.py  test_pytensor_utils.py  util.py
src/emll/test_models/: __init__.py  common_utils.py  mendes_model.py  unlabeled18.ant
tests/: test_bmca.py  test_data_model_integration.py  test_enzymes.csv  test_preprocess.py  test_priorpredictive.py  unittest_tools.py
tests/test_data/: expected_wu2004_FCC_posterior_ADVI.csv  expected_wu2004_FCC_posterior_NUTS.csv  expected_wu2004_FCCpriors.csv  expected_wu2004_FCCpriors_updated.csv  metab_colnames.csv  metab_rownames.csv  metab_rownames.xlsx  metabolite_concentrations_clean.csv
tests/test_models/: __init__.py  contador_updatedbounds.json  wu2004_model.json  wu2004_model.sbml
