[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emll"
dynamic = ["version"]
description = "Code for running LinLog Kinetics"
readme = "README.md"
license= {text = "LGPL/GPL v2+"}
requires-python = ">=3.9"
authors = [
	{ name = "Peter St. John", email = "test@test.com" },
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true