##########################
# Setup.py Configuration #
##########################
[metadata]
name = emll
version = 0.1.1-dev
description = Code for running LinLog Kinetics
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bayesian inference, metabolic modeling, kinetics
license = LGPL/GPL v2+
classifiers =
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
	matplotlib
	patsy
	seaborn	
	tqdm
	numpy
	pandas
	scipy
	cython
	cobra
	swiglpk
	pymc

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

[flake8]
ignore =
    S301
    S403
    S404
    S603
    W503
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 100
max-complexity = 20
application-import-names =
    emll
    tests

[mypy]
ignore_missing_imports = True
