##########################
# Setup.py Configuration #
##########################
[metadata]
name = emll
version = 0.1.1-dev
description = Code for running LinLog Kinetics
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/PNNL-CompBio/emll
download_url = https://github.com/PNNL-CompBio/emll/releases
project_urls =
    Tracker = https://github.com/PNNL-CompBio/emll/issues
    Source = https://github.com/PNNL-CompBio/emll
    Documentation = https://emll.readthedocs.io
    
# Author information
author = Peter St. John
author_email = me@pcstj.com
maintainer = Andrew D. McNaughton
maintainer_email = andrew.mcnaughton@pnnl.gov

# License Information
license = LGPL/GPL v2+

# Search tags
classifiers =
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    bayesian inference
    metabolic modeling
    kinetics

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
	matplotlib
	patsy
	seaborn	
	tqdm
	numpy
	pandas
	scipy
	cython
	cobra
	swiglpk
	pymc

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301
    S403
    S404
    S603
    W503
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 100
max-complexity = 20
application-import-names =
    emll
    tests

#######################
# MyPy Configuration  #
# (.mypy)             #
#######################
[mypy]
ignore_missing_imports = True
